--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.16.4",
     "helmet": "^3.15.0",
     "knex": "^0.16.3",
+    "knex-cli": "^1.0.2",
     "sqlite3": "^4.0.6"
   },
   "devDependencies": {
